# hera_polarization_subtraction

./: README.md  pyproject.toml
hera_pol_sub/: __init__.py  _version.py
notebooks/source_identification/: README.md  source_identification_template.ipynb
