[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hera_pol_sub"
dynamic = ["version"]
description = "HERA polarization subtraction package for identifying and subtracting polarized sources"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "HERA Collaboration"}
]
keywords = ["astronomy", "radio astronomy", "HERA", "polarization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "astropy>=5.0",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
]
notebooks = [
    "jupyterlab",
    "ipywidgets",
    "seaborn",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/tyler-a-cox/hera_polarization_subtraction"
Repository = "https://github.com/tyler-a-cox/hera_polarization_subtraction"

[tool.setuptools_scm]
write_to = "hera_pol_sub/_version.py"

[tool.setuptools.packages.find]
include = ["hera_pol_sub*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88